--- a/components/default/home-assistant/http-route.yaml
+++ b/components/default/home-assistant/http-route.yaml
@@ -11,7 +11,7 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
     gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/home-assistant.png
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
 spec:
   parentRefs:
     - name: ${GATEWAY_EXTERNAL}
