--- a/components/observability/loki/values.yaml
+++ b/components/observability/loki/values.yaml
@@ -62,7 +62,7 @@ gateway:
   service:
     type: LoadBalancer
     annotations:
-      lbipam.cilium.io/ips: ${SVC_LOKI_ADDR}
+      lbipam.cilium.io/ips: 10.30.30.160
   ingress:
     enabled: false
 backend:
