(chore): fix secret

--- a/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
@@ -17,6 +17,7 @@ spec:
         INTERNAL_IP_ADDRESS: "{{.INTERNAL_IP_ADDRESS}}"
         GATEWAY_NAME: "{{.GATEWAY}}"
         GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
+        GATEWAY_EXTERNAL: "{{.GATEWAY_EXTERNAL}}"
   dataFrom:
     - extract:
         key: talos
