--- a/components/default/piped/externalsecret.yaml
+++ b/components/default/piped/externalsecret.yaml
@@ -3,7 +3,6 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: piped
-  namespace: default
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -31,3 +30,35 @@ spec:
         key: piped
     - extract:
         key: cloudnative-pg
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: piped-secret
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword-connect
+  target:
+    name: piped-secret
+    creationPolicy: Owner
+    template:
+      engineVersion: v2
+      data:
+        config.properties: |
+          API_URL: https://papi.${CLUSTER_DOMAIN}
+          COMPROMISED_PASSWORD_CHECK: true
+          DISABLE_REGISTRATION: true
+          FEED_RETENTION: 30
+          FRONTEND_URL: https://yt.${CLUSTER_DOMAIN}
+          HTTP_WORKERS: 4
+          PORT: 8080
+          PROXY_PART: https://pproxy.${CLUSTER_DOMAIN}
+          SENTRY_DSN:
+          hibernate.connection.driver_class: org.postgresql.Driver
+          hibernate.connection.url: jdbc:postgresql://postgres17-rw.default.svc.cluster.local:5432/piped
+          hibernate.connection.username: "{{ .PIPED_DB_USERNAME }}"
+          hibernate.connection.password: "{{ .PIPED_DB_PASSWORD }}"
+  dataFrom:
+    - extract:
+        key: piped
