--- a/clusters/talos/apps/default/homepage/configmap.yaml
+++ b/clusters/talos/apps/default/homepage/configmap.yaml
@@ -9,7 +9,7 @@ metadata:
 data:
   kubernetes.yaml: |
     mode: cluster
-    ingress: true
+    gateway: true
   settings.yaml: |
     title: k8s Homelab Dashboard
     background:
