(chore): remove quotes and try

--- a/components/default/piped/externalsecret.yaml
+++ b/components/default/piped/externalsecret.yaml
@@ -57,8 +57,8 @@ spec:
           SENTRY_DSN:
           hibernate.connection.driver_class: org.postgresql.Driver
           hibernate.connection.url: jdbc:postgresql://postgres17-rw.default.svc.cluster.local:5432/{{ .PIPED_DB_NAME }}
-          hibernate.connection.username: "{{ .PIPED_DB_USERNAME }}"
-          hibernate.connection.password: "{{ .PIPED_DB_PASSWORD }}"
+          hibernate.connection.username: {{ .PIPED_DB_USERNAME }}
+          hibernate.connection.password: {{ .PIPED_DB_PASSWORD }}
   dataFrom:
     - extract:
         key: piped
