--- a/components/downloads/sabnzbd/kustomization.yaml
+++ b/components/downloads/sabnzbd/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: downloads
 components:
-  - ../../../components/volsync
+  - ../../volsync-system/volsync-replication
 resources:
   - ./externalsecret.yaml
   - ./http-route.yaml
