(chore): add observability

--- a/clusters/talos/apps/25-observability.yaml
+++ b/clusters/talos/apps/25-observability.yaml
@@ -14,7 +14,11 @@ applications:
     destination:
       namespace: observability
     source:
-      path: components/observability/kube-prometheus-stack
+      path: clusters/omv/apps/observability/kube-prometheus-stack
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: ceph-block
 
   loki:
     annotations:
