--- a/clusters/talos/apps/kustomization.yaml
+++ b/clusters/talos/apps/kustomization.yaml
@@ -15,5 +15,6 @@ helmCharts:
       - ./15-database-operator.yaml
       - ./16-database-clusters.yaml
       - ./20-applications.yaml
+      - ./25-observability.yaml
 
 patches: []
