(chore): add httproute grafana

--- a/components/observability/grafana/kustomization.yaml
+++ b/components/observability/grafana/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: observability
 resources:
   - ./externalsecret.yaml
+  - ./http-route.yaml
 
 helmCharts:
   - name: grafana
