--- a/components/observability/grafana/http-route.yaml
+++ b/components/observability/grafana/http-route.yaml
@@ -1,24 +1,23 @@
-apiVersion: networking.x-k8s.io/v1alpha1
+---
+apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: grafana
-  namespace: observability
+  name: &app grafana
   labels:
-    app.kubernetes.io/instance: grafana
-    app.kubernetes.io/name: grafana
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
   annotations:
     gethomepage.dev/href: "https://grafana.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
-    gethomepage.dev/icon: grafana.png
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/grafana.png
 spec:
-  hostnames:
-    - grafana.${CLUSTER_DOMAIN}
-  rules:
-    - backendRefs:
-        - name: grafana
-          port: 80
   parentRefs:
     - name: ${GATEWAY_NAME}
       namespace: ${GATEWAY_NAMESPACE}
       sectionName: https
+  hostnames: ["grafana.${CLUSTER_DOMAIN}"]
+  rules:
+    - backendRefs:
+        - name: grafana
+          port: 80
