(chore): enable crds

--- a/clusters/omv/apps/observability/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/omv/apps/observability/kube-prometheus-stack/kustomization.yaml
@@ -9,6 +9,7 @@ helmCharts:
     releaseName: kube-prometheus-stack
     namespace: observability
     repo: oci://ghcr.io/prometheus-community/charts
+    includeCRDs: true
     version: 78.2.1
     valuesInline:
       kubeEtcd:
