--- a/clusters/talos/apps/observability/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/talos/apps/observability/kube-prometheus-stack/kustomization.yaml
@@ -9,5 +9,6 @@ helmCharts:
     releaseName: kube-prometheus-stack
     namespace: observability
     repo: oci://ghcr.io/prometheus-community/charts
+    includeCRDs: true
     version: 78.2.1
     valuesFile: ../../../../../components/observability/kube-prometheus-stack/values.yaml
