(chore): add cloudflare and update kubechecks

--- a/clusters/talos/apps/default/homepage/externalsecret.yaml
+++ b/clusters/talos/apps/default/homepage/externalsecret.yaml
@@ -103,7 +103,7 @@ spec:
     - secretKey: HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN
       remoteRef:
         key: cloudflare
-        property: home-kubernetes-token
+        property: HOMEPAGE_TUNNEL_TOKEN
     - secretKey: HOMEPAGE_VAR_AUTHENTIK_API_TOKEN
       remoteRef:
         key: authentik
