--- a/components/argo-system/kubechecks/externalsecret.yaml
+++ b/components/argo-system/kubechecks/externalsecret.yaml
@@ -19,5 +19,5 @@ spec:
     - extract:
         conversionStrategy: Default
         decodingStrategy: None
-        key: developer-hub
+        key: kubechecks
         metadataPolicy: None
