--- a/clusters/talos/apps/30-system.yaml
+++ b/clusters/talos/apps/30-system.yaml
@@ -16,10 +16,10 @@ applications:
   #   source:
   #     path: components/system-upgrade/system-upgrade-controller
 
-  # kubechecks:
-  #   annotations:
-  #     argocd.argoproj.io/sync-wave: "30"
-  #   destination:
-  #     namespace: argo-system
-  #   source:
-  #     path: components/argo-system/kubechecks
+  kubechecks:
+    annotations:
+      argocd.argoproj.io/sync-wave: "30"
+    destination:
+      namespace: argo-system
+    source:
+      path: clusters/talos/apps/argo-system/kubechecks
