--- a/components/network/cloudflare-tunnel/externalsecret.yaml
+++ b/components/network/cloudflare-tunnel/externalsecret.yaml
@@ -14,8 +14,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        TUNNEL_ID: "{{.TUNNEL_ID}}"
-        credentials.json: "{{.CREDENTIALS_JSON}}"
+        TUNNEL_ID: "{{.TUNNEL_ID_CASA}}"
+        credentials.json: "{{.CREDENTIALS_JSON_CASA}}"
   dataFrom:
     - extract:
         key: cloudflare
