--- a/clusters/talos/apps/default/homepage/externalsecret.yaml
+++ b/clusters/talos/apps/default/homepage/externalsecret.yaml
@@ -95,7 +95,7 @@ spec:
     - secretKey: HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID
       remoteRef:
         key: cloudflare
-        property: ACCOUNT_ID_VIKASPOGU_COM
+        property: ACCOUNT_ID
     - secretKey: HOMEPAGE_VAR_CLOUDFLARED_TUNNELID
       remoteRef:
         key: cloudflare
