(chore): fix dns

--- a/components/cert-manager/cert-manager/issuers/externalsecret.yaml
+++ b/components/cert-manager/cert-manager/issuers/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        api-key: "{{.api_key_casa}}"
+        api-key: "{{.API_KEY_CASA}}"
   dataFrom:
     - extract:
         key: cloudflare
