--- a/components/network/cloudflare-dns/externalsecret.yaml
+++ b/components/network/cloudflare-dns/externalsecret.yaml
@@ -14,8 +14,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        email: "{{.email}}"
-        api-key: "{{.api_key}}"
+        email: "{{.EMAIL}}"
+        api-key: "{{.API_KEY_CASA}}"
   dataFrom:
     - extract:
         key: cloudflare
