(chore): update secret

--- a/components/network/cloudflare-dns/externalsecret.yaml
+++ b/components/network/cloudflare-dns/externalsecret.yaml
@@ -14,8 +14,9 @@ spec:
     template:
       engineVersion: v2
       data:
-        email: "{{.EMAIL}}"
-        api-key: "{{.API_KEY_CASA}}"
+        EMAIL: "{{.EMAIL}}"
+        API_KEY: "{{.API_KEY_CASA}}"
+        CF_ZONE_ID: "{{ .ZONE_ID_CASA }}"
   dataFrom:
     - extract:
         key: cloudflare
